# olmonoko

./: .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  docker-compose.yml  flake.nix
olmonoko-backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  TODO.md  build.rs  fly.toml
olmonoko-backend/.cargo/: audit.toml
olmonoko-backend/.sqlx/: query-053f4f09cf2acd4be9673b59a8bed7e8a21f00d71d2922447e2568bab5d1316b.json  query-0a37f28aa8f10fb93d5ad8db5e30357666a6b294e15905bf3f01482ab6722808.json  query-0af8bc3f18ecc9bc5158503c05e630cc1c724167a17245d40bcb6710fa78148e.json  query-0d4d698b039ac95743392f44379bd1b8881297a06d0e0d333b065aec5d9da24e.json  query-0d95f096c65277c2a6f7af9f2353e586a9034319d2254fc1532c4bc62a9e7497.json  query-0e6b455d3f8c0eb992e7f02dc3c68dd57f3fa0567d47f01d0022d6a43e8a4bed.json  query-1523c13051bd744809677737ab067f8f17ca15f927af663710ef643bf8acb70a.json  query-1793e43187abf1c0a66ecbb510402d3b45422c5510e72217e9b7235aa1adbf8a.json  query-18c12664e49358de737dd7da30b15f8789f52addd1857e7ff6772a0f23da1fa2.json  query-1b27b013294a2cbe939e36d2bd058ec6a15f4d3391b2faaea83a2ee17dab67fa.json  query-1c6ed56674d82d4f4b73366729fcb8bd211feaf631d1e08f663b70c3424ae10b.json  query-1d2d3eae3ca241866e3a56ede78bccef185cd30c3f57cb32a09fd9ccf89e2ae4.json  query-1e5184369adcb40f14a3f42ef08c8e3898ba8a90daca2c96b519692230ad9902.json  query-1f1ab1f47d6c5236fe2cfd5c1902b66a35c3dd40c9c5ad3f2924397d1d30b860.json  query-21bc4d7f234987161e41de6219062993ac24c8e94abc576811799e986218efcf.json  query-21c43916e3517ed0010e5381d064ab84f0c8cbda047fef37b4d2464d1c91b7c2.json  query-226ddc7a45388ea85f0f41ee3da754710f17e1b909be262498008766aa9fcfad.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2869588c3d3fcf550a1ef6af1781d1920087589c160fc02963b8838d222b9341.json  query-28a873343fec9c3e6e78d798505a8ccd494d37d0e2144d84d825a1d40268f089.json  query-28de7a034d318602c45953e857b60d3710f8342672658222e7754b9b762127b1.json  query-2910e1cef30d0c08150ce319c811386cdceda8a66884deb73656eaf78e834586.json  query-29d66ca269cd2b566ca9497799e7806c17614b79e71304ea4db72efd26df3315.json  query-2c14fa4afe65902b0e7587c7a2e11f4b51342031c868f742ecd2ae18031f023d.json  query-327b81e4750f87deeff3b0e334c927cf5773a7c9dfc4354ed47e5ccdbbd6cc7b.json  query-3484cf36d74f7df693bf040b44c2351bc0555bb81b73bb635037e1f268250e3f.json  query-36b11688e4fc2ab41755fdf3ae21066d17d683f368627746aa82bd2140c2c179.json  query-3930721333b6da6db18db63741f65e5a814e3cfbd517991c4dcf5a80ddddad07.json  query-3955a52d1d403cfb6fcc7f0c3e306d38191849da991eafddf80695ca45a6c958.json  query-3bf08474390059c99f6c058a3140d79322745029143d9a6f0b3bd354128a8ae0.json  query-3d18622f2f83e0d658c7ba5ba2773cfb71509beaad8497d27f9851f952e86f9c.json  query-413474643caf053217cae194663a28040f833d6913b4499a51f9e5cc9430bd4f.json  query-431307db9fd9615f138c743949114eb4874ca4dcde65e667eb713f190c331423.json  query-45028f4f0642c7fe2b13eef1a4995231e0903f3654e09c126d9686d3c7216a00.json  query-4a06efa523e34cfbf5eec9121a1741d4c6d6d9c79547a882b432fee9ee11ee24.json  query-4b7a815afb6e66925ac7c504175f44e5422703cdaaad59ce5a599630f9d4a392.json  query-4c8d2d6979f85b22a0e771cf81218cf8f5b07451e1e121d2389b1c558da0ee13.json  query-4d3e58825335ea93505b7fe267b2251e116a40b96542e07d0549e983a15ff8ef.json  query-5166a2da804637fce4164761ef4b4aa3c0e202073c7cf814bd416282833f2f3f.json  query-542b247ea450366428c05af0aff0800b710a5226bf7026d4a6b555999fa86cd2.json  (+67 more)
olmonoko-backend/migrations/: 20240521235949_users.up.sql  20240521235957_sessions.up.sql  20240522000007_ics_sources.down.sql  20240522000007_ics_sources.up.sql  20240522000020_events.up.sql  20240522000029_public_calendar_links.down.sql  20240522000029_public_calendar_links.up.sql  20240522001653_event_occurrences.down.sql  20240522001653_event_occurrences.up.sql  20240524232726_add_rrule_to_events.down.sql  20240524232726_add_rrule_to_events.up.sql  20240530210625_local_event_sources.down.sql  20240530210625_local_event_sources.up.sql  20240531211439_bills.down.sql  20240531211439_bills.up.sql  20240601160915_bills_v2.down.sql  20240601160915_bills_v2.up.sql  20240602111630_events_all_day.down.sql  20240602111630_events_all_day.up.sql  20240603085513_bills_unique_event_id.down.sql  20240603085513_bills_unique_event_id.up.sql  20240604004506_priority.down.sql  20240604004506_priority.up.sql  20240604221624_export_priority_filter.down.sql  20240604221624_export_priority_filter.up.sql  20240606124506_event_uid_unique.down.sql  20240606124506_event_uid_unique.up.sql  20240606124947_event_occurrence_unique.down.sql  20240606124947_event_occurrence_unique.up.sql  20240606131831_ics_sources_persist.down.sql  20240606131831_ics_sources_persist.up.sql  20240606145949_multiple_public_calendar_links.down.sql  20240606145949_multiple_public_calendar_links.up.sql  20240606203447_ics_all_as_allday.down.sql  20240606203447_ics_all_as_allday.up.sql  20240606230949_remote_events_nonuniform_priority.down.sql  20240606230949_remote_events_nonuniform_priority.up.sql  20240606234811_ics_import_templates.down.sql  20240606234811_ics_import_templates.up.sql  20240607230921_user_preferred_timezone.down.sql  (+19 more)
olmonoko-backend/src/: lib.rs  main.rs
olmonoko-backend/src/auth/: email.rs  mod.rs
olmonoko-backend/src/calendar_io/: scheduler.rs  source_processing.rs
olmonoko-backend/src/db/: attendance.rs  errors.rs  events.rs  ical.rs  sources.rs  timeline.rs  user.rs
olmonoko-backend/src/db_utils/: attendance.rs  events.rs  mod.rs  request.rs  sources.rs  timeline.rs  user.rs
olmonoko-backend/src/logic/: mod.rs  scheduler.rs  source_processing.rs  subscriber_processing.rs
olmonoko-backend/src/middleware/: autocache_responder.rs  autocacher.rs  mod.rs
olmonoko-backend/src/models/: attendance.rs  ics_source.rs  mod.rs  public_link.rs  session.rs  user.rs
olmonoko-backend/src/routes/: mod.rs
olmonoko-backend/src/utils/: event_filters.rs  mod.rs  (+7 more)
olmonoko-common/: Cargo.toml
olmonoko-common/src/: lib.rs
olmonokod/: Cargo.toml
olmonokod/src/: main.rs  olmonoko.rs  renderer.rs
olmonokod/systemd/: olmonokod.service
(+133 files in other folders)
