[package]
name = "olmonoko-backend"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[dependencies]
# Environment variables from .env file
dotenvy = "0.15.7"
# Async runtime
tokio = { version = "1.37.0", features = ["full"] }
# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.10"
# Web framework
actix-web = "4"
# Easier error handling
thiserror = "1.0"
# serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19.1"
actix-cors = "0.7.0"
utoipa = { version = "4.2.0", features = ["uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
actix-files = "0.6.5"
bcrypt = "0.15.1"
reqwest = { version = "0.12.4", default-features = false, features = [
	"rustls-tls",
	"cookies",
] }
anyhow = "1.0.82"
serde_json = "1.0.116"
itertools = "0.12.1"
icalendar = { git = "https://github.com/xypine/icalendar-rs.git", features = [
	"serde",
	"chrono-tz",
] } # originally version = "0.16.1"
chrono-tz = "0.9.0"
rrule = { version = "0.12.0", features = ["by-easter"] }
sqlx = { version = "0.7.4", default-features = false, features = [
	"runtime-tokio",
	"tls-rustls",
	"migrate",
	"macros",
	"uuid",
	"postgres",
	"chrono",
	"time",
] }
time = { version = "0.3.36", features = ["serde"] }
serde_with = "3.8.1"
uuid = { version = "1.8.0", features = ["serde"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
built = { version = "0.7", features = ["chrono", "git2"] }
chrono-humanize = "0.2.3"
serde_urlencoded = "0.7.1"
resend-rs = { version = "0.5.2", default-features = false, features = [
	"rustls-tls",
] }
actix-web-lab = "0.20.2"
pin-project = "1.1.5"
futures-util = "0.3.30"
moka = { version = "0.12.7", features = ["future"] }
once_cell = "1.19.0"
regex = "1.10.5"
sha2 = "0.10.8"
