[package]
name = "olmonoko-backend"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[dependencies]
olmonoko-common = { path = "../olmonoko-common" }
# Environment variables from .env file
dotenvy = "0.15"
# Async runtime
tokio = { version = "1.37", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
# Web framework
actix-web = "4"
# Easier error handling
thiserror = "1.0"
# serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19"
actix-cors = "0.7"
utoipa = { version = "4.2", features = ["uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
actix-files = "0.6"
bcrypt = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"cookies",
] }
anyhow = "1.0"
serde_json = "1.0"
itertools = "0.12"
icalendar = { git = "https://github.com/xypine/icalendar-rs.git", features = [
	"serde",
	"chrono-tz",
] } # originally version = "0.16.1"
chrono-tz = "0.9"
rrule = { version = "0.12", features = ["by-easter"] }
sqlx = { version = "0.7", default-features = false, features = [
	"runtime-tokio",
	"tls-rustls",
	"migrate",
	"macros",
	"uuid",
	"postgres",
	"chrono",
	"time",
] }
time = { version = "0.3", features = ["serde"] }
serde_with = "3.8.1"
uuid = { version = "1.8.0", features = ["serde"] }
tokio-cron-scheduler = { version = "0.10", features = ["signal"] }
built = { version = "0.7", features = ["chrono", "git2"] }
chrono-humanize = "0.2"
serde_urlencoded = "0.7.1"
resend-rs = { version = "0.5", default-features = false, features = [
	"rustls-tls",
] }
actix-web-lab = "0.20.2"
pin-project = "1.1.5"
futures-util = "0.3.30"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19.0"
regex = "1.10.5"
sha2 = "0.10.8"
