[package]
name = "olmonoko-backend"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[dependencies]
olmonoko-common = { path = "../olmonoko-common" }
# Environment variables from .env file
dotenvy = "0.15"
# Async runtime
tokio = { version = "1.42", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
# Web framework
actix-web = "4.9"
# Easier error handling
thiserror = "2.0"
# serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"
actix-cors = "0.7"
actix-files = "0.6"
bcrypt = "0.16"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"cookies",
] }
anyhow = "1.0"
serde_json = "1.0"
itertools = "0.13"
icalendar = { version = "0.16", features = ["serde", "chrono-tz"] }
chrono-tz = "0.10"
rrule = { version = "0.13", features = ["by-easter"] }
sqlx = { version = "0.8", default-features = false, features = [
	"runtime-tokio",
	"tls-rustls",
	"migrate",
	"macros",
	"uuid",
	"postgres",
	"chrono",
	"time",
] }
time = { version = "0.3", features = ["serde"] }
serde_with = "3.11"
uuid = { version = "1.11", features = ["serde"] }
tokio-cron-scheduler = { version = "0.13", features = ["signal"] }
built = { version = "0.7", features = ["chrono", "git2"] }
chrono-humanize = "0.2"
serde_urlencoded = "0.7"
resend-rs = { version = "0.9", default-features = false, features = [
	"rustls-tls",
] }
pin-project = "1.1"
futures-util = "0.3"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.20"
regex = "1.11"
sha2 = "0.10"
iso8601 = "0.6"
nlcep = "0.8"
rss = "2.0"
